# GPTQ-for-LLaMa

./: commands.md  pyproject.toml
gptq_for_llama/: gptq.py  llama_inference.py  starcoder.py  starcoder_inference.py
gptq_for_llama/utils/: datautils.py
