[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gptq_for_llama"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "safetensors==0.3.0","datasets==2.10.1","sentencepiece","transformers","accelerate==0.17.1","triton==2.0.0","texttable","toml","numpy","protobuf==3.20.2","termcolor"
]

[project.optional-dependencies]
dev = ["black==23.3.0", "pylint==2.8.2"]
